--- a/MRI.ipynb
+++ b/MRI.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CS222-UIUC/course-project-mri-detector/blob/ViT/MRI.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -225,15 +235,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "**Chosen**: ViT"
-      ],
-      "metadata": {
-        "id": "IY6JbX4e91AE"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "table2 = [['Model', 'Pros', 'Cons'],\n",
@@ -245,7 +246,7 @@
       "metadata": {
         "id": "eEnAQV9p9zBF"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -260,7 +261,7 @@
         "id": "FkFtm9A9uubo",
         "outputId": "961080cf-3f7f-48c2-83e3-93f10d7b4139"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,11 +290,148 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Chosen**: Vision Transformers (ViT)"
+      ],
+      "metadata": {
+        "id": "Lz36yYRqVyJC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# About Vision Transformers\n",
+        "First introduced in 2020 by Google Brain, ViT is a powerful and efficient model that translates the popular Transformer models in NLP to computer vision.\n",
+        "\n",
+        "## Model Architecture\n",
+        "\n",
+        "![image.png](https://viso.ai/wp-content/uploads/2021/09/vision-transformer-vit.png)\n",
+        "\n",
+        "As we can see, an image is broken into patches of fixed size like 16x16 or 32x32 (which is why \"An Image is worth 16x16 words\").\n",
+        "\n",
+        "The patches are flattened and sent to the encoder through a linear projection. To keep track of where each patch is, a positional embedding vector is also sent into the encoder as an input.\n",
+        "\n",
+        "![image1.png](https://github.com/lucidrains/vit-pytorch/raw/main/images/vit.gif)\n",
+        "\n",
+        "The first token of the transformer is special.\n",
+        "\n",
+        "The encoder then combines the patches with the positional embedding vector. Its output is passed directly into an MLP to obtain a classification output."
+      ],
+      "metadata": {
+        "id": "fLYlUTLIV4YI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "table3 = [['Library', 'Pros', 'Cons'],\n",
+        "         ['TensorFlow', 'Simple and intuitive; has no assumptions; has no \\ntraining step; easy to implement; can be used for \\nboth regression and classification', 'slow runtime; does not work well with \\nincreased number of variables; sensitive to outliers'],\n",
+        "         ['PyTorch', 'Can model complex temporal dependencies in data; \\nused for both supervised and unsupervised learning; \\nhandles missing data; computationally efficient', 'Limited to modeling linear dependencies in data; \\nrequires large dataset for training; sensitive to \\nchoice of initial parameters; does not work well \\nwith increased number of variables'],\n",
+        "         ['JAX', 'Automatically learns hierarchical features from raw \\ndata; can handle inputs of different shapes and \\nsizes; reduces number of parameters needed for the model', 'Computationally intensive; prone to overfitting; \\nrequires large amount of training data']]"
+      ],
+      "metadata": {
+        "id": "5gvbw_YPL1OJ"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tabulate(table3, headers='firstrow', tablefmt='fancy_grid'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r5VimN48SMol",
+        "outputId": "b57e47ae-fa52-4902-c694-f0f2de14800c"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "╒════════════╤══════════════════════════════════════════════════════════╤══════════════════════════════════════════════════════╕\n",
+            "│ Library    │ Pros                                                     │ Cons                                                 │\n",
+            "╞════════════╪══════════════════════════════════════════════════════════╪══════════════════════════════════════════════════════╡\n",
+            "│ TensorFlow │ Simple and intuitive; has no assumptions; has no         │ slow runtime; does not work well with                │\n",
+            "│            │ training step; easy to implement; can be used for        │ increased number of variables; sensitive to outliers │\n",
+            "│            │ both regression and classification                       │                                                      │\n",
+            "├────────────┼──────────────────────────────────────────────────────────┼──────────────────────────────────────────────────────┤\n",
+            "│ PyTorch    │ Can model complex temporal dependencies in data;         │ Limited to modeling linear dependencies in data;     │\n",
+            "│            │ used for both supervised and unsupervised learning;      │ requires large dataset for training; sensitive to    │\n",
+            "│            │ handles missing data; computationally efficient          │ choice of initial parameters; does not work well     │\n",
+            "│            │                                                          │ with increased number of variables                   │\n",
+            "├────────────┼──────────────────────────────────────────────────────────┼──────────────────────────────────────────────────────┤\n",
+            "│ JAX        │ Automatically learns hierarchical features from raw      │ Computationally intensive; prone to overfitting;     │\n",
+            "│            │ data; can handle inputs of different shapes and          │ requires large amount of training data               │\n",
+            "│            │ sizes; reduces number of parameters needed for the model │                                                      │\n",
+            "╘════════════╧══════════════════════════════════════════════════════════╧══════════════════════════════════════════════════════╛\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "table4 = [['Pre-train vs. Self-train', 'Pros', 'Cons'],\n",
+        "         ['Pre-train', 'Simple and intuitive; has no assumptions; has no \\ntraining step; easy to implement; can be used for \\nboth regression and classification', 'slow runtime; does not work well with \\nincreased number of variables; sensitive to outliers'],\n",
+        "         ['Self-train', 'Can model complex temporal dependencies in data; \\nused for both supervised and unsupervised learning; \\nhandles missing data; computationally efficient', 'Limited to modeling linear dependencies in data; \\nrequires large dataset for training; sensitive to \\nchoice of initial parameters; does not work well \\nwith increased number of variables']]"
+      ],
+      "metadata": {
+        "id": "5CmqUuwGSgrV"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tabulate(table3, headers='firstrow', tablefmt='fancy_grid'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gkMyy3X8SlVh",
+        "outputId": "fe9fda43-8dfe-4f71-9c03-5c2e0dd3cf1e"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "╒════════════╤══════════════════════════════════════════════════════════╤══════════════════════════════════════════════════════╕\n",
+            "│ Library    │ Pros                                                     │ Cons                                                 │\n",
+            "╞════════════╪══════════════════════════════════════════════════════════╪══════════════════════════════════════════════════════╡\n",
+            "│ TensorFlow │ Simple and intuitive; has no assumptions; has no         │ slow runtime; does not work well with                │\n",
+            "│            │ training step; easy to implement; can be used for        │ increased number of variables; sensitive to outliers │\n",
+            "│            │ both regression and classification                       │                                                      │\n",
+            "├────────────┼──────────────────────────────────────────────────────────┼──────────────────────────────────────────────────────┤\n",
+            "│ PyTorch    │ Can model complex temporal dependencies in data;         │ Limited to modeling linear dependencies in data;     │\n",
+            "│            │ used for both supervised and unsupervised learning;      │ requires large dataset for training; sensitive to    │\n",
+            "│            │ handles missing data; computationally efficient          │ choice of initial parameters; does not work well     │\n",
+            "│            │                                                          │ with increased number of variables                   │\n",
+            "├────────────┼──────────────────────────────────────────────────────────┼──────────────────────────────────────────────────────┤\n",
+            "│ JAX        │ Automatically learns hierarchical features from raw      │ Computationally intensive; prone to overfitting;     │\n",
+            "│            │ data; can handle inputs of different shapes and          │ requires large amount of training data               │\n",
+            "│            │ sizes; reduces number of parameters needed for the model │                                                      │\n",
+            "╘════════════╧══════════════════════════════════════════════════════════╧══════════════════════════════════════════════════════╛\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
