try to fix metadata issue

--- a/MRI.ipynb
+++ b/MRI.ipynb
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "9yI8yPferHSs"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -328,14 +328,14 @@
       "cell_type": "code",
       "source": [
         "table3 = [['Library', 'Pros', 'Cons'],\n",
-        "         ['TensorFlow', 'Simple and intuitive; has no assumptions; has no \\ntraining step; easy to implement; can be used for \\nboth regression and classification', 'slow runtime; does not work well with \\nincreased number of variables; sensitive to outliers'],\n",
-        "         ['PyTorch', 'Can model complex temporal dependencies in data; \\nused for both supervised and unsupervised learning; \\nhandles missing data; computationally efficient', 'Limited to modeling linear dependencies in data; \\nrequires large dataset for training; sensitive to \\nchoice of initial parameters; does not work well \\nwith increased number of variables'],\n",
-        "         ['JAX', 'Automatically learns hierarchical features from raw \\ndata; can handle inputs of different shapes and \\nsizes; reduces number of parameters needed for the model', 'Computationally intensive; prone to overfitting; \\nrequires large amount of training data']]"
+        "         ['TensorFlow', 'well documented with a large community; \\ngood framework for neural networks; \\nhas a dedicated medical imaging library called TensorFlow Medical Imaging ', 'is more difficult to use/learn; \\nis slower when training larger data models; \\nrequires more code to do simple tasks;'],\n",
+        "         ['PyTorch', 'beginner friendly library (easy to use); \\nhas dynamic computational graph which allows for more flexibility in building models', 'fewer resources and features than TensorFlow; \\nnot as much connection into apps (used more for research)'],\n",
+        "         ['JAX', 'built for high speed numerical computing; \\nhas built in engine for building deep learnig models; \\nsupports python and numpy;', 'fewer resources than Pytorch and TensorFlow; \\n']]"
       ],
       "metadata": {
         "id": "5gvbw_YPL1OJ"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -348,30 +348,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r5VimN48SMol",
-        "outputId": "b57e47ae-fa52-4902-c694-f0f2de14800c"
+        "outputId": "846a472a-33a2-4cc4-8c1e-a7e7fb60ca43"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "╒════════════╤══════════════════════════════════════════════════════════╤══════════════════════════════════════════════════════╕\n",
-            "│ Library    │ Pros                                                     │ Cons                                                 │\n",
-            "╞════════════╪══════════════════════════════════════════════════════════╪══════════════════════════════════════════════════════╡\n",
-            "│ TensorFlow │ Simple and intuitive; has no assumptions; has no         │ slow runtime; does not work well with                │\n",
-            "│            │ training step; easy to implement; can be used for        │ increased number of variables; sensitive to outliers │\n",
-            "│            │ both regression and classification                       │                                                      │\n",
-            "├────────────┼──────────────────────────────────────────────────────────┼──────────────────────────────────────────────────────┤\n",
-            "│ PyTorch    │ Can model complex temporal dependencies in data;         │ Limited to modeling linear dependencies in data;     │\n",
-            "│            │ used for both supervised and unsupervised learning;      │ requires large dataset for training; sensitive to    │\n",
-            "│            │ handles missing data; computationally efficient          │ choice of initial parameters; does not work well     │\n",
-            "│            │                                                          │ with increased number of variables                   │\n",
-            "├────────────┼──────────────────────────────────────────────────────────┼──────────────────────────────────────────────────────┤\n",
-            "│ JAX        │ Automatically learns hierarchical features from raw      │ Computationally intensive; prone to overfitting;     │\n",
-            "│            │ data; can handle inputs of different shapes and          │ requires large amount of training data               │\n",
-            "│            │ sizes; reduces number of parameters needed for the model │                                                      │\n",
-            "╘════════════╧══════════════════════════════════════════════════════════╧══════════════════════════════════════════════════════╛\n"
+            "╒════════════╤══════════════════════════════════════════════════════════════════════════════════════╤═══════════════════════════════════════════════════════════╕\n",
+            "│ Library    │ Pros                                                                                 │ Cons                                                      │\n",
+            "╞════════════╪══════════════════════════════════════════════════════════════════════════════════════╪═══════════════════════════════════════════════════════════╡\n",
+            "│ TensorFlow │ well documented with a large community;                                              │ is more difficult to use/learn;                           │\n",
+            "│            │ good framework for neural networks;                                                  │ is slower when training larger data models;               │\n",
+            "│            │ has a dedicated medical imaging library called TensorFlow Medical Imaging            │ requires more code to do simple tasks;                    │\n",
+            "├────────────┼──────────────────────────────────────────────────────────────────────────────────────┼───────────────────────────────────────────────────────────┤\n",
+            "│ PyTorch    │ beginner friendly library (easy to use);                                             │ fewer resources and features than TensorFlow;             │\n",
+            "│            │ has dynamic computational graph which allows for more flexibility in building models │ not as much connection into apps (used more for research) │\n",
+            "├────────────┼──────────────────────────────────────────────────────────────────────────────────────┼───────────────────────────────────────────────────────────┤\n",
+            "│ JAX        │ Automatically learns hierarchical features from raw                                  │ Computationally intensive; prone to overfitting;          │\n",
+            "│            │ data; can handle inputs of different shapes and                                      │ requires large amount of training data                    │\n",
+            "│            │ sizes; reduces number of parameters needed for the model                             │                                                           │\n",
+            "╘════════════╧══════════════════════════════════════════════════════════════════════════════════════╧═══════════════════════════════════════════════════════════╛\n"
           ]
         }
       ]
@@ -386,43 +384,39 @@
       "metadata": {
         "id": "5CmqUuwGSgrV"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(tabulate(table3, headers='firstrow', tablefmt='fancy_grid'))"
+        "print(tabulate(table4, headers='firstrow', tablefmt='fancy_grid'))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gkMyy3X8SlVh",
-        "outputId": "fe9fda43-8dfe-4f71-9c03-5c2e0dd3cf1e"
+        "outputId": "8ba9a13d-13fe-4b3f-f6d6-1822858f9757"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "╒════════════╤══════════════════════════════════════════════════════════╤══════════════════════════════════════════════════════╕\n",
-            "│ Library    │ Pros                                                     │ Cons                                                 │\n",
-            "╞════════════╪══════════════════════════════════════════════════════════╪══════════════════════════════════════════════════════╡\n",
-            "│ TensorFlow │ Simple and intuitive; has no assumptions; has no         │ slow runtime; does not work well with                │\n",
-            "│            │ training step; easy to implement; can be used for        │ increased number of variables; sensitive to outliers │\n",
-            "│            │ both regression and classification                       │                                                      │\n",
-            "├────────────┼──────────────────────────────────────────────────────────┼──────────────────────────────────────────────────────┤\n",
-            "│ PyTorch    │ Can model complex temporal dependencies in data;         │ Limited to modeling linear dependencies in data;     │\n",
-            "│            │ used for both supervised and unsupervised learning;      │ requires large dataset for training; sensitive to    │\n",
-            "│            │ handles missing data; computationally efficient          │ choice of initial parameters; does not work well     │\n",
-            "│            │                                                          │ with increased number of variables                   │\n",
-            "├────────────┼──────────────────────────────────────────────────────────┼──────────────────────────────────────────────────────┤\n",
-            "│ JAX        │ Automatically learns hierarchical features from raw      │ Computationally intensive; prone to overfitting;     │\n",
-            "│            │ data; can handle inputs of different shapes and          │ requires large amount of training data               │\n",
-            "│            │ sizes; reduces number of parameters needed for the model │                                                      │\n",
-            "╘════════════╧══════════════════════════════════════════════════════════╧══════════════════════════════════════════════════════╛\n"
+            "╒════════════════════════════╤══════════════════════════════════════════════════════╤══════════════════════════════════════════════════════╕\n",
+            "│ Pre-train vs. Self-train   │ Pros                                                 │ Cons                                                 │\n",
+            "╞════════════════════════════╪══════════════════════════════════════════════════════╪══════════════════════════════════════════════════════╡\n",
+            "│ Pre-train                  │ Simple and intuitive; has no assumptions; has no     │ slow runtime; does not work well with                │\n",
+            "│                            │ training step; easy to implement; can be used for    │ increased number of variables; sensitive to outliers │\n",
+            "│                            │ both regression and classification                   │                                                      │\n",
+            "├────────────────────────────┼──────────────────────────────────────────────────────┼──────────────────────────────────────────────────────┤\n",
+            "│ Self-train                 │ Can model complex temporal dependencies in data;     │ Limited to modeling linear dependencies in data;     │\n",
+            "│                            │ used for both supervised and unsupervised learning;  │ requires large dataset for training; sensitive to    │\n",
+            "│                            │ handles missing data; computationally efficient      │ choice of initial parameters; does not work well     │\n",
+            "│                            │                                                      │ with increased number of variables                   │\n",
+            "╘════════════════════════════╧══════════════════════════════════════════════════════╧══════════════════════════════════════════════════════╛\n"
           ]
         }
       ]
