--- a/MRI.ipynb
+++ b/MRI.ipynb
@@ -12,35 +12,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vRay-IKmIlH4",
-        "outputId": "6b276de4-e93d-445e-91a5-417e24166278"
+        "outputId": "6d5fcd23-5eb4-4ffd-b821-23a5906acc7e"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting flask-ngrok\n",
             "  Downloading flask_ngrok-0.0.25-py3-none-any.whl (3.1 kB)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.8/dist-packages (from flask-ngrok) (2.25.1)\n",
-            "Requirement already satisfied: Flask>=0.8 in /usr/local/lib/python3.8/dist-packages (from flask-ngrok) (2.2.3)\n",
-            "Requirement already satisfied: importlib-metadata>=3.6.0 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (6.0.0)\n",
-            "Requirement already satisfied: Jinja2>=3.0 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (3.1.2)\n",
-            "Requirement already satisfied: click>=8.0 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (8.1.3)\n",
-            "Requirement already satisfied: itsdangerous>=2.0 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (2.1.2)\n",
-            "Requirement already satisfied: Werkzeug>=2.2.2 in /usr/local/lib/python3.8/dist-packages (from Flask>=0.8->flask-ngrok) (2.2.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests->flask-ngrok) (2022.12.7)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests->flask-ngrok) (1.26.14)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests->flask-ngrok) (2.10)\n",
-            "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests->flask-ngrok) (4.0.0)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.8/dist-packages (from importlib-metadata>=3.6.0->Flask>=0.8->flask-ngrok) (3.15.0)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.8/dist-packages (from Jinja2>=3.0->Flask>=0.8->flask-ngrok) (2.1.2)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.9/dist-packages (from flask-ngrok) (2.27.1)\n",
+            "Requirement already satisfied: Flask>=0.8 in /usr/local/lib/python3.9/dist-packages (from flask-ngrok) (2.2.3)\n",
+            "Requirement already satisfied: Werkzeug>=2.2.2 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (2.2.3)\n",
+            "Requirement already satisfied: itsdangerous>=2.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (2.1.2)\n",
+            "Requirement already satisfied: importlib-metadata>=3.6.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (6.1.0)\n",
+            "Requirement already satisfied: click>=8.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (8.1.3)\n",
+            "Requirement already satisfied: Jinja2>=3.0 in /usr/local/lib/python3.9/dist-packages (from Flask>=0.8->flask-ngrok) (3.1.2)\n",
+            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (2.0.12)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (3.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (2022.12.7)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.9/dist-packages (from requests->flask-ngrok) (1.26.15)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.9/dist-packages (from importlib-metadata>=3.6.0->Flask>=0.8->flask-ngrok) (3.15.0)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.9/dist-packages (from Jinja2>=3.0->Flask>=0.8->flask-ngrok) (2.1.2)\n",
             "Installing collected packages: flask-ngrok\n",
             "Successfully installed flask-ngrok-0.0.25\n"
           ]
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "gvdV9b0IKh2Q"
       },
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "J_bmIPFnKopM"
       },
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "cXxwupVUKveu"
       },
@@ -89,33 +89,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
-          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "MYatV68EK0P2",
-        "outputId": "cf018489-e17d-490e-a540-33dc2500c623"
+        "outputId": "a0ead29e-b1da-497f-b36f-279b5af8f766"
       },
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             " * Serving Flask app '__main__'\n",
             " * Debug mode: off\n"
           ]
         },
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "INFO:werkzeug:\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
             " * Running on http://127.0.0.1:5000\n",
@@ -123,25 +116,11 @@
           ]
         },
         {
-          "metadata": {
-            "tags": null
-          },
+          "output_type": "stream",
           "name": "stdout",
-          "output_type": "stream",
           "text": [
-            " * Running on http://821f-34-86-213-103.ngrok.io\n",
+            " * Running on http://fda0-35-224-109-166.ngrok.io\n",
             " * Traffic stats available on http://127.0.0.1:4040\n"
-          ]
-        },
-        {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:werkzeug:127.0.0.1 - - [28/Feb/2023 23:06:21] \"GET / HTTP/1.1\" 200 -\n",
-            "INFO:werkzeug:127.0.0.1 - - [28/Feb/2023 23:06:23] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
           ]
         }
       ],
@@ -157,7 +136,7 @@
       "metadata": {
         "id": "U0As6R8HY0W8"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -177,7 +156,7 @@
       "metadata": {
         "id": "9yI8yPferHSs"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -192,7 +171,7 @@
       "metadata": {
         "id": "dbggZZ2YrNdW"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -205,9 +184,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CFXc0kO8sKIN",
-        "outputId": "684c114d-afbd-4983-a99e-cc14737c8a97"
+        "outputId": "d27fab59-71ea-4485-883e-f43889587af0"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +225,7 @@
       "metadata": {
         "id": "eEnAQV9p9zBF"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -259,9 +238,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FkFtm9A9uubo",
-        "outputId": "961080cf-3f7f-48c2-83e3-93f10d7b4139"
+        "outputId": "3cb9745f-49cc-4ac0-9320-7d80416b63dc"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,7 +314,7 @@
       "metadata": {
         "id": "5gvbw_YPL1OJ"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -348,9 +327,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r5VimN48SMol",
-        "outputId": "846a472a-33a2-4cc4-8c1e-a7e7fb60ca43"
+        "outputId": "113ae516-8cce-4814-ab4c-d30ab878efd3"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,9 +345,9 @@
             "│ PyTorch    │ beginner friendly library (easy to use);                                             │ fewer resources and features than TensorFlow;             │\n",
             "│            │ has dynamic computational graph which allows for more flexibility in building models │ not as much connection into apps (used more for research) │\n",
             "├────────────┼──────────────────────────────────────────────────────────────────────────────────────┼───────────────────────────────────────────────────────────┤\n",
-            "│ JAX        │ Automatically learns hierarchical features from raw                                  │ Computationally intensive; prone to overfitting;          │\n",
-            "│            │ data; can handle inputs of different shapes and                                      │ requires large amount of training data                    │\n",
-            "│            │ sizes; reduces number of parameters needed for the model                             │                                                           │\n",
+            "│ JAX        │ built for high speed numerical computing;                                            │ fewer resources than Pytorch and TensorFlow;              │\n",
+            "│            │ has built in engine for building deep learnig models;                                │                                                           │\n",
+            "│            │ supports python and numpy;                                                           │                                                           │\n",
             "╘════════════╧══════════════════════════════════════════════════════════════════════════════════════╧═══════════════════════════════════════════════════════════╛\n"
           ]
         }
@@ -384,7 +363,7 @@
       "metadata": {
         "id": "5CmqUuwGSgrV"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -397,9 +376,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gkMyy3X8SlVh",
-        "outputId": "8ba9a13d-13fe-4b3f-f6d6-1822858f9757"
+        "outputId": "a236931e-9c0a-477a-bbd8-a0d413d2cba6"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
